--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^16.0.0",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18"
   },
   "devDependencies": {
