--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@directus/sdk": "^16.0.0",
+    "@hookform/resolvers": "^3.4.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
