--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "auth/*": ["./src/auth/*"],
     }
   },
+  "downlevelIteration": true,
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
