--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,20 +7,20 @@
       "source.fixAll.eslint": "explicit"
     },
     "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "GitHub.copilot"
+      },
+      "[typescript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+      },
+      "[typescriptreact]": {
+        "editor.defaultFormatter": "GitHub.copilot"
+      },
+      "json.format.enable": true,
+      "[json]": {
+        "editor.defaultFormatter": "GitHub.copilot"
+      },
+      "[css]": {
+        "editor.defaultFormatter": "GitHub.copilot"
     },
-    "[typescript]": {
-      "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "[typescriptreact]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "json.format.enable": true,
-    "[json]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[css]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
   }
   
