--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     }
   },
   "downlevelIteration": true,
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
