--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,22 @@
-NEXT_PUBLIC_DIRECTUS_API=http://127.0.0.1:8055
+# .env.example Required for GIT Repository
+
+# Next-Auth Requirements
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
+
+#NextJS Public Information
 NEXT_PUBLIC_SITE_NAME="Acme Inc"
 NEXT_PUBLIC_SITE_DESCRIPTION="This library has saved me countless hours of work and helped me deliver stunning designs to my clients faster than ever before."
-DIRECTUS_AUTH_GOOGLE_CLIENT_ID="" #Obtained from Google Developer Console API Authorization
-DIRECTUS_AUTH_GOOGLE_CLIENT_SECRET="" #Obtained from Google Developer Console API Authorization
+NEXT_PUBLIC_DIRECTUS_API="http://localhost:8055" #Directus SSL https URL for API
+NEXT_PUBLIC_NEXTAUTH_URL="http://localhost:3000" #NextJS URL for API Client Calls
+
+#Directus SSO
 DIRECTUS_SESSION_TOKEN_NAME="directus_session" #Must match Directus ENV Configuration SESSION_COOKIE_NAME, SESSION_COOKIE_DOMAIN, SESSION_COOKIE_SECURE="true", SESSION_COOKIE_SAME_SITE="None", AUTH_GOOGLE_REDIRECT_ALLOW_LIST must contain NextJs domain.
+DIRECTUS_SESSION_TOKEN_DOMAIN="" #Will need to be secure and will not work until pushed to production. 
+
+#Directus API
+DIRECTUS_STATIC_ADMIN_TOKEN="" #Do not use your primary admin token, create a new one for the purpose of this connection.  Will create users and grant additional permissions when users base level doesn't work.
+DIRECTUS_STATIC_VIEWER_TOKEN="" #Used to view content that you do not want to be public, but want loaded into NextJS.
+
+#Directus User Creation
+DIRECTUS_BASE_USER_ROLE="" #The UUID for role that will be assigned to new users created by the system.  This should be a role that has the permissions you want to grant to users via the Register Form.
