Fixed login callbackUrl loop.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.4",
     "sitemap": "^8.0.0",
     "ssh2": "^1.15.0",
@@ -33,6 +34,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/ssh2": "^1.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
